--- a/addons/sale/views/sale_views.xml
+++ b/addons/sale/views/sale_views.xml
@@ -198,6 +198,7 @@
                 <tree string="Sales Orders" sample="1" decoration-info="invoice_status == 'to invoice'" decoration-muted="state == 'cancel'">
                     <field name="message_needaction" invisible="1"/>
                     <field name="name" string="Number" readonly="1" decoration-bf="1"/>
+		    <field name="yunmao_purchase_order" />
                     <field name="date_order" string="Order Date" widget="date" optional="show"/>
                     <field name="commitment_date" optional="hide"/>
                     <field name="expected_date" optional="hide"/>
@@ -224,6 +225,7 @@
             <field name="arch" type="xml">
                 <tree string="Quotation" class="o_sale_order" sample="1" decoration-info="state in ['draft', 'sent']" decoration-muted="state == 'cancel'">
                     <field name="name" string="Number" readonly="1" decoration-bf="1"/>
+		    <field name="yunmao_purchase_order" />
                     <field name="create_date" string="Creation Date" widget="date" optional="show"/>
                     <field name="commitment_date" widget="date" optional="hide"/>
                     <field name="expected_date" widget="date" optional="hide"/>
@@ -345,7 +347,10 @@
                             <field name="currency_id" invisible="1"/>
                             <field name="tax_country_id" invisible="1"/>
                             <field name="payment_term_id" options="{'no_open':True,'no_create': True}"/>
-			    <field name="main_purchase_order"/>
+			    <field name="yunmao_purchase_order"/>
+			    <field name="yunmao_order_type"/>
+			    <field name="yunmao_order_habor"/>
+			    <field name="yunmao_order_attachment_ids" widget="many2many_binary"/>
                         </group>
                     </group>
                     <notebook>
