--- a/addons/purchase/views/purchase_views.xml
+++ b/addons/purchase/views/purchase_views.xml
@@ -486,6 +486,11 @@
 					    <field name="date" string="开票日期" />
 					    <field name="name" string="发票号码" />
 					    <field name="invoice_type" string="发票类型" />
+					    <field name="expense_type" string="费用类型" />
+					    <field name="invoice_value" string="发票金额" />
+					    <field name="invoice_tax" string="税额" />
+					    <field name="invoice_total" string="价税合计" />
+					<field name="attachment_ids" widget="many2many_binary" string="相关文件" />
 
 			    	</tree>
 			</field>
@@ -649,8 +654,6 @@
                     <field name="partner_ref" optional="hide"/>
                     <field name="name" string="Reference" readonly="1" decoration-info="state in ('draft','sent')"/>
 		<field name="yunmao_purchase_order_id" />
-		<field name="yunmao_product_quant" />
-		<field name="yunmao_product_unit_price" />
 		<field name="is_landed_cost" />
                     <field name="date_order" invisible="not context.get('quotation_only', False)" optional="show"/>
                     <field name="date_approve" invisible="context.get('quotation_only', False)" optional="show"/>
@@ -666,6 +669,8 @@
                     <field name="state" optional="show"/>
                     <field name="invoice_status" optional="hide"/>
                     <field name="activity_exception_decoration" widget="activity_exception"/>
+		<field name="yunmao_product_quant" />
+                <field name="yunmao_product_unit_price" />
                 </tree>
             </field>
         </record>
@@ -688,8 +693,6 @@
                     <field name="partner_ref" optional="hide"/>
                     <field name="name" string="Reference" readonly="1" decoration-bf="1"/>
 		<field name="yunmao_purchase_order_id" />
-		<field name="yunmao_product_quant" />
-		<field name="yunmao_product_unit_price" />
 		<field name="is_landed_cost" />
                     <field name="date_approve" invisible="context.get('quotation_only', False)" optional="show"/>
                     <field name="partner_id" readonly="1"/>
@@ -707,6 +710,8 @@
                     <field name="state" optional="show" widget="badge" decoration-success="state == 'purchase' or state == 'done'"
                         decoration-warning="state == 'to approve'" decoration-info="state == 'draft' or state == 'sent'"/>
                     <field name="invoice_status" optional="hide"/>
+		<field name="yunmao_product_quant" />
+                <field name="yunmao_product_unit_price" />
                 </tree>
             </field>
         </record>
@@ -729,8 +734,6 @@
                     <field name="partner_ref" optional="hide"/>
                     <field name="name" string="Reference" readonly="1" decoration-bf="1" decoration-info="state in ('draft','sent')"/>
 		<field name="yunmao_purchase_order_id" />
-		<field name="yunmao_product_quant" />
-		<field name="yunmao_product_unit_price" />
 		<field name="is_landed_cost" />
                     <field name="date_approve" widget="date" invisible="context.get('quotation_only', False)" optional="show"/>
                     <field name="partner_id"/>
@@ -745,6 +748,8 @@
                     <field name="currency_id" invisible="1"/>
                     <field name="state" invisible="1"/>
                     <field name="invoice_status" widget="badge" decoration-success="invoice_status == 'invoiced'" decoration-info="invoice_status == 'to invoice'" optional="show"/>
+		<field name="yunmao_product_quant" />
+                <field name="yunmao_product_unit_price" />
                 </tree>
             </field>
         </record>
