--- a/odoo/addons/base/views/res_partner_views.xml
+++ b/odoo/addons/base/views/res_partner_views.xml
@@ -230,6 +230,7 @@
                                 />
                             </div>
                             <field name="category_id" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}" placeholder="Tags..."/>
+			    <field name="attachment_ids" widget="many2many_binary"/>
                         </group>
                     </group>
 
